--- a/css/main.css
+++ b/css/main.css
@@ -61,3 +61,35 @@ header {
   color: #333333;
   font-size: .8rem;
   font-weight: bold; }
+
+.header-icons {
+  float: right;
+  vertical-align: middle; }
+  .header-icons > * {
+    display: inline-block;
+    margin-left: 15px; }
+
+.fa-bell,
+.fa-plus {
+  color: #333333;
+  font-size: 1rem; }
+
+.triangle {
+  height: 0;
+  width: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #333333;
+  position: relative;
+  top: 6px;
+  margin-left: 2px; }
+
+.profile-thumbnail {
+  height: 25px;
+  width: 25px;
+  position: relative;
+  top: 5px;
+  border-radius: 3px; }
+
+.header-lists {
+  cursor: pointer; }
