--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html {
   box-sizing: inherit; }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
   font-size: 62.5%; }
 
 a {
@@ -114,10 +114,40 @@ header {
   .sidebar-container:last-child {
     margin-right: 0; }
 
-.profile-pic {
+.profile {
   width: 100%;
-  height: 100%;
-  border-radius: 5px; }
+  border-bottom: 1px solid #cccccc;
+  padding-bottom: 20px; }
+  .profile .profile-pic {
+    width: 100%;
+    border-radius: 5px;
+    height: 100%; }
+  .profile .user-full-name {
+    line-height: 30px;
+    color: #333333;
+    font-size: 2.6em;
+    font-weight: bold; }
+  .profile .user-name {
+    line-height: 30px;
+    color: #666666;
+    font-size: 2em; }
+
+.email-joined-container {
+  width: 100%;
+  border-bottom: 1px solid #cccccc;
+  padding: 20px 0; }
+  .email-joined-container .fa,
+  .email-joined-container a,
+  .email-joined-container span {
+    color: #333333;
+    font-size: 1.4em; }
+  .email-joined-container a {
+    color: #487dbd; }
+  .email-joined-container h4 {
+    line-height: 25px; }
+  .email-joined-container .fa {
+    width: 25px;
+    color: #999999; }
 
 .repos-container {
   float: left;
