--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,8 @@ header {
 
 .header-logo {
   height: 30px;
-  width: 30px; }
+  width: 30px;
+  font-size: 30px; }
 
 .header-search {
   position: relative;
@@ -80,8 +81,9 @@ header {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 5px solid #333333;
+  display: inline-block;
   position: relative;
-  top: 6px;
+  top: 0px;
   margin-left: 2px; }
 
 .profile-thumbnail {
@@ -99,7 +101,7 @@ header {
   margin-left: auto;
   margin-right: auto;
   border-bottom: 1px solid #cccccc;
-  padding: 20px;
+  padding: 20px 20px 30px;
   min-width: 980px; }
   .main-body-container::after {
     clear: both;
@@ -305,4 +307,38 @@ header {
 .repo-lines h3 {
   line-height: 20px;
   color: #999999;
+  font-size: 1.2em; }
+
+.footer-container {
+  max-width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px 0;
+  text-align: center; }
+  .footer-container::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .footer-container .fa {
+    font-size: 3em; }
+  .footer-container .left-footer {
+    float: left; }
+  .footer-container .right-footer {
+    float: right; }
+
+.left-footer-links a {
+  padding: 0 5px;
+  color: #487dbd; }
+
+.left-footer-links > * {
+  display: inline-block; }
+
+.right-footer-links a {
+  padding: 0 5px;
+  color: #487dbd; }
+
+.right-footer-links > * {
+  display: inline-block; }
+
+.footer-link {
   font-size: 1.2em; }
