--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ header {
     color: #487dbd; }
 
 .header-icons {
+  position: relative;
   float: right;
   vertical-align: middle; }
   .header-icons > * {
@@ -91,8 +92,18 @@ header {
   top: -2px;
   margin-left: 2px; }
 
+.header-icon {
+  position: relative;
+  text-align: center; }
+
 .header-icon:hover .fa {
   color: #487dbd; }
+
+.header-icon:hover .tooltip {
+  visibility: visible; }
+
+.header-icon:hover .tooltip-triangle {
+  visibility: visible; }
 
 .header-icon:hover .triangle {
   height: 0;
@@ -100,6 +111,30 @@ header {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 5px solid #487dbd; }
+
+.notification-tooltip {
+  position: absolute;
+  bottom: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #333333;
+  padding: 10px;
+  visibility: hidden;
+  text-align: center;
+  white-space: nowrap;
+  color: white; }
+
+.tooltip-triangle {
+  height: 0;
+  width: 0;
+  border-bottom: 7px solid #333333;
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  visibility: hidden; }
 
 .profile-thumbnail {
   height: 25px;
