--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 $max-width: 980px;
 $header: rgba(245, 245, 245, 1);
 $border: 1px solid rgba(204, 204, 204, 1);
+$border-color: rgba(204, 204, 204, 1);
 $light-border: 1px solid rgba(238, 238, 238, 1);
 $dark-text: rgba(51, 51, 51, 1);
 $light-text: rgba(102, 102, 102, 1);
@@ -157,6 +158,8 @@ header {
   transform: translateX(-50%);
   visibility: hidden;
 }
+
+
 
 .profile-thumbnail {
   @include size(25px 25px);
@@ -539,3 +542,158 @@ header {
 .footer-link:hover {
   text-decoration: underline;
 }
+
+//---------------Modals-----------------//
+.create-popup {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  height: 0;
+  overflow: hidden;
+
+  &.clicked {
+    height: auto;
+    overflow: auto;
+  }
+
+  .create-popup-container {
+    @include outer-container;
+    min-width: $max-width;
+    position: relative;
+  }
+}
+
+.create-popup-items {
+  position: absolute;
+  top: 50px;
+  right: 30px;
+  background-color: white;
+  padding: 10px 0;
+  border: $border;
+  border-radius: 3px;
+  width: 200px;
+  font-size: 1.4em;
+  white-space: nowrap;
+}
+
+
+.create-popup-item {
+  padding: 10px;
+
+  &:hover {
+    background-color: $color-text;
+    color: $popup-text;
+  }
+}
+
+.profile-popup {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: transparent;
+  height: 0;
+  overflow: hidden;
+
+  &.clicked {
+    height: auto;
+    overflow: auto;
+  }
+
+  .profile-popup-container {
+    @include outer-container;
+    min-width: $max-width;
+    position: relative;
+  }
+}
+
+.profile-popup-box {
+  position: absolute;
+  top: 60px;
+  right: -10px;
+  background-color: white;
+  padding: 10px 0;
+  border: $border;
+  border-radius: 3px;
+  width: 200px;
+  font-size: 1.4em;
+  white-space: nowrap;
+}
+
+.profile-popup-name {
+  padding: 10px;
+  color: $light-text;
+  border-bottom: $border;
+
+  h3 {
+    line-height: 20px;
+  }
+
+  .popup-name-text {
+    font-weight: bold;
+  }
+}
+
+.popup-middle-links {
+  border-bottom: $border;
+  padding: 5px 0;
+}
+
+.popup-middle-link {
+  padding: 0 10px;
+  line-height: 30px;
+
+  &:hover {
+    background-color: $color-text;
+    color: $popup-text;
+  }
+}
+
+.popup-bottom-links{
+  bottom-border: $border;
+  padding: 5px 0;
+}
+
+.popup-bottom-link {
+  padding: 0 10px;
+  line-height: 30px;
+
+  &:hover {
+    background-color: $color-text;
+    color: $popup-text;
+  }
+}
+
+
+/* Required for Down Triangle */
+  .popup-triangle::before, .popup-triangle::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: transparent;
+    border-top: 0;
+  }
+
+  /* Stroke */
+  .popup-triangle:before {
+    top: -16px;
+    right: 21px;
+
+    /* If 1px darken stroke slightly */
+    border-bottom-color: $border-color;;
+    border-width: 16px;
+  }
+
+  /* Fill */
+  .popup-triangle:after {
+    top: -15px;
+    right: 22px;
+    border-bottom-color: white;
+    border-width: 15px;
+  }
